[package]
name = "add_piece"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4.7"
rayon = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = "3.2"
vc-processors = { git = "https://github.com/ipfs-force-community/venus-cluster", branch = "fix/0x5459/move_fn_init_numa_pool_out_of_vc_processors", default-features = false, features = ["builtin"] }
storage-proofs-core = { version = "11.1.1", default-features = false}
filecoin-proofs = { version = "11.1.1", default-features = false }
filecoin-hashers = { version = "~6.1.0", default-features = false, features = ["poseidon", "sha256"] }
fr32 = { version = "~4.1.0", default-features = false }